
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


typedef int u_char ;
struct TYPE_3__ {int isacfifo; } ;
struct TYPE_4__ {TYPE_1__ teles3; } ;
struct IsdnCardState {TYPE_2__ hw; } ;


 int write_fifo (int ,int *,int) ;

__attribute__((used)) static void
WriteISACfifo(struct IsdnCardState *cs, u_char * data, int size)
{
 write_fifo(cs->hw.teles3.isacfifo, data, size);
}
